homelab/shelfmark/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shelfmark
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
